RESOLVED FIXED123499
[GTK] webkit_web_context_allow_tls_certificate_for_host doc is missing Since tag
https://bugs.webkit.org/show_bug.cgi?id=123499
Summary [GTK] webkit_web_context_allow_tls_certificate_for_host doc is missing Since tag
Carlos Garcia Campos
Reported 2013-10-30 01:00:05 PDT
It should have Since: 2.4
Attachments
Patch (1.27 KB, patch)
2013-10-30 01:01 PDT, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2013-10-30 01:01:17 PDT
WebKit Commit Bot
Comment 2 2013-10-30 01:03:53 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2013-10-30 01:29:32 PDT
Note You need to log in before you can comment on or make changes to this bug.