[GTK] webkit_web_context_allow_tls_certificate_for_host doc is missing Since tag https://bugs.webkit.org/show_bug.cgi?id=123499

Reviewed by Philippe Normand.

* UIProcess/API/gtk/WebKitWebContext.cpp: Add Since: 2.4.

Canonical link: https://commits.webkit.org/141628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158260 268f45cc-cd09-0410-ab3c-d52691b4dbfc